project('quakegeneric', 'c')

m_dep = meson.get_compiler('c').find_library('m', required : false)

quakegeneric_sources = [
	'source/cd_null.c',
	'source/chase.c',
	'source/cl_demo.c',
	'source/cl_input.c',
	'source/cl_main.c',
	'source/cl_parse.c',
	'source/cl_tent.c',
	'source/cmd.c',
	'source/common.c',
	'source/console.c',
	'source/crc.c',
	'source/cvar.c',
	'source/d_edge.c',
	'source/d_fill.c',
	'source/d_init.c',
	'source/d_modech.c',
	'source/d_part.c',
	'source/d_polyse.c',
	'source/d_scan.c',
	'source/d_sky.c',
	'source/d_sprite.c',
	'source/d_surf.c',
	'source/d_vars.c',
	'source/d_zpoint.c',
	'source/draw.c',
	'source/host_cmd.c',
	'source/host.c',
	'source/in_null.c',
	'source/keys.c',
	'source/mathlib.c',
	'source/menu.c',
	'source/model.c',
	'source/net_loop.c',
	'source/net_main.c',
	'source/net_none.c',
	'source/net_vcr.c',
	'source/nonintel.c',
	'source/pr_cmds.c',
	'source/pr_edict.c',
	'source/pr_exec.c',
	'source/r_aclip.c',
	'source/r_alias.c',
	'source/r_bsp.c',
	'source/r_draw.c',
	'source/r_edge.c',
	'source/r_efrag.c',
	'source/r_light.c',
	'source/r_main.c',
	'source/r_misc.c',
	'source/r_part.c',
	'source/r_sky.c',
	'source/r_sprite.c',
	'source/r_surf.c',
	'source/r_vars.c',
	'source/sbar.c',
	'source/screen.c',
	'source/snd_null.c',
	'source/sv_main.c',
	'source/sv_move.c',
	'source/sv_phys.c',
	'source/sv_user.c',
	'source/sys_null.c',
	'source/vid_null.c',
	'source/view.c',
	'source/wad.c',
	'source/world.c',
	'source/zone.c',
	'source/quakegeneric.c'
]

static_library('quakegeneric', quakegeneric_sources, dependencies : m_dep)
